Excercise 2 Font Family Correction

--- a/foundations/02-class-id-selectors/style2.css
+++ b/foundations/02-class-id-selectors/style2.css
@@ -1,6 +1,6 @@
 p {
     background-color: #fc4a85;
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, 'DejaVu Sans', sans-serif;
 }
 
 #second {
