--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
@@ -7,21 +13,35 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  border: #fff 9px solid;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 20px;
+  padding: 11px;
+  margin-bottom: 9px;
 }
 
 .content {
   background: #e3f4ff;
+  font-size: 15px;
+  padding: 8px;
+  margin-bottom: 9px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 10px;
+
 }
 
 button {
   background: white;
-  border: 1px solid #eee;
+  border: 5px solid #fff;
+  width: 120px;
+  height: 35px;
+  display: block;
+  margin: 0 auto;
 }
